# anafi_autonomy

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: setAnafi.cfg  setSafeAnafi.cfg  setTrajectory.cfg
config/: params_autonomy.yaml  params_controller_pid.yaml  params_safe_anafi.yaml  params_trajectory.yaml
include/anafi_autonomy/: autonomy.h  controller.h  erl_bridge.hpp  numericalDerivative.h  safeAnafi.h  trajectory.h
launch/: anafi.launch  anafi_autonomy_launch.py  control_anafi.launch  control_anafi_launch.py  indoor_test.launch  munich_telepresence.launch  safe_anafi_launch.py  skycontroller.launch  telepresence.launch
missions/: mission_template.txt  photo.mavlink  test.mavlink  waypoints.txt
msg/: KeyboardCameraCommand.msg  KeyboardCommand.msg  KeyboardDroneCommand.msg  KeyboardMoveCommand.msg  PoseCommand.msg  ReferenceCommand.msg  SkyControllerCommand.msg
script/: config_anafi_ip.sh
scripts/: config_anafi_ip.sh  config_skycontroller_ip.sh  setup_drones.sh
src/: PIDController.cpp  autonomy.cpp  erl_bridge.cpp  erl_bridge_main.cpp  example.cpp  keyboard.cpp  rtp_stream.cpp  safeAnafi.cpp  teleopKey.cpp  trajectory.cpp
src/anafi_autonomy/: __init__.py  anafi  event_listener.py  event_listener_anafi.py  event_listener_skycontroller.py  photo.py  skycontroller3
