<?xml version="1.0"?>
<package format="3">
	<name>anafi_autonomy</name>
	<version>0.3.0</version>
	<description>The anafi_autonomy package</description>

	<maintainer email="andriy.sarabakha@ntu.edu.sg">Andriy Sarabakha</maintainer>

	<license>BSD</license>

	<author email="andriy.sarabakha@ntu.edu.sg">Andriy Sarabakha</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>
  
	<exec_depend>rosidl_default_runtime</exec_depend>
  
	<depend>dynamic_reconfigure</depend>
	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2</depend>
	<depend>anafi_ros_interfaces</depend>
	
	<exec_depend>anafi_ros_nodes</exec_depend>
	
	<member_of_group>rosidl_interface_packages</member_of_group>
  
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
